--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="hello">Hello</h1>
-    <script src="main.js"></script>
+    <nav>
+        <ul>
+            <li class="brand">
+                <img src="logo.png" alt="Spotify"/><span>Spotify</span>
+            </li>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+    </nav>
 </body>
 </html>
