UI done, lets move towards JS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css" integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav>
@@ -17,5 +18,70 @@
             <li>About</li>
         </ul>
     </nav>
+    <div id="container">
+        
+        <div id="songList">
+            <h1>Best of NCS- Copyright are reserved</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                   <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                   <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                   </span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+                 <div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div><div class="songItem">
+                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
+                    </span></span>
+                 </div>
+            </div>
+        </div>
+        <div id="songBanner"></div>
+    </div>
+    <div id="bottom">
+        <input type="range" name="rang" id="myProgressBar" min="0" max="100">
+        <div id="icons">
+            <img class="white" src="backward-step-solid.svg" alt="play"/>
+            <img class="white" src="play-solid.svg" alt="play" />
+            <img class="white" src="forward-step-solid.svg" alt="play" />
+        </div>
+        <div class="songInfo"><img src="playing.gif"> Let me love you- Justn Biber</div>
+    </div>
+    <script src="main.js"></script>
+   
+    
 </body>
 </html>
