--- a/index.html
+++ b/index.html
@@ -24,64 +24,71 @@
             <h1>Best of NCS- Copyright are reserved</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                   <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                   <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                   </span></span>
+                   <img  height="30px" width="35px" alt="1"/>
+                   <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                   <span class="timestamp"> 04:40 <img id="1" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                   </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 05:49 <img id="2" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 03:45 <img id="3" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 05:52 <img id="4" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 02:49 <img id="5" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 04:55 <img id="6" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 04:09 <img id="7" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
                  <div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay"> &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 04:40 <img id="8" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div><div class="songItem">
-                    <img src="covers/1.jpg" height="30px" width="35px" alt="1"/>
-                    <span class="songListPlay"> let me love you &nbsp;&nbsp;&nbsp;<span class="timestamp"> 05:49 <img class="black"src="play-solid.svg" alt="play" />
-                    </span></span>
+                    <img  height="30px" width="35px" alt="1"/>
+                    <span class="songListPlay">  &nbsp;&nbsp;&nbsp;</span>
+                    <span class="timestamp"> 03:04 <img id="9" class="songItemPlay black"src="play-solid.svg" alt="play" />
+                    </span>
                  </div>
             </div>
         </div>
         <div id="songBanner"></div>
     </div>
     <div id="bottom">
-        <input type="range" name="rang" id="myProgressBar" min="0" max="100">
+        <input type="range" name="rang" id="myProgressBar" value="0" min="0" max="100">
         <div id="icons">
             <img class="white" src="backward-step-solid.svg" alt="play"/>
-            <img class="white" src="play-solid.svg" alt="play" />
+            <img  class="white pause" id="masterPlay" src="play-solid.svg" alt="play" />
             <img class="white" src="forward-step-solid.svg" alt="play" />
         </div>
-        <div class="songInfo"><img src="playing.gif"> Let me love you- Justn Biber</div>
+        <div class="songInfo"><img src="playing.gif" id="gif"> <span id="masterSong"></span></div>
     </div>
     <script src="main.js"></script>
-   
-    
 </body>
 </html>
