Improement in app

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <div id="bottom">
         <input type="range" name="rang" id="myProgressBar" value="0" min="0" max="100">
         <div id="icons">
-            <img class="white" src="backward-step-solid.svg" alt="play"/>
+            <img class="white" id="previous" src="backward-step-solid.svg" alt="play"/>
             <img  class="white pause" id="masterPlay" src="play-solid.svg" alt="play" />
-            <img class="white" src="forward-step-solid.svg" alt="play" />
+            <img class="white" id="next" src="forward-step-solid.svg" alt="play" />
         </div>
         <div class="songInfo"><img src="playing.gif" id="gif"> <span id="masterSong"></span></div>
     </div>
