--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="container">
         
         <div id="songList">
-            <h1>Best of NCS- Copyright are reserved</h1>
+            <h1 class="heading">Best of NCS- Copyright are reserved</h1>
             <div class="songItemContainer">
                 <div class="songItem">
                    <img  height="30px" width="35px" alt="1"/>
@@ -89,6 +89,7 @@
         </div>
         <div class="songInfo"><img src="playing.gif" id="gif"> <span id="masterSong"></span></div>
     </div>
+   
     <script src="main.js"></script>
 </body>
 </html>
